--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,14 @@ askama = "0.12.1"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
 tower-http = { version = "0.6.1", features = ["trace"] }
+urlencoding = "2.1.3"
+chrono = "0.4.38"
+chrono-tz = "0.10.0"
+reqwest = { version = "0.12", features = ["json"] }
+serde_repr = "0.1.19"
+colored = "2.1.0"
+uuid = { version = "1.11", features = ["serde", "v4"] }
+regex = "1.11.1"
 
 [dev-dependencies]
 cargo-watch = "8.5.3"
