--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ serde_repr = "0.1.19"
 colored = "2.1.0"
 uuid = { version = "1.11", features = ["serde", "v4"] }
 regex = "1.11.1"
+echodb = "0.7.0"
 
 [dev-dependencies]
 cargo-watch = "8.5.3"
