--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ colored = "2.1.0"
 uuid = { version = "1.11", features = ["serde", "v4"] }
 regex = "1.11.1"
 echodb = "0.7.0"
+strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
 
 [dev-dependencies]
 cargo-watch = "8.5.3"
