--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ shuttle = "0.8.0"
 shuttle-runtime = "0.49.0"
 shuttle-axum = "0.49.0"
 askama_axum = "0.4.0"
-askama = "0.12.1"
+askama = {version = "0.12.1", features = ["markdown"]}
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
 tower-http = { version = "0.6.1", features = ["trace"] }
