--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,28 +4,33 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.8.0"
-tokio = {version = "1", features = ["full"]}
-serde = {version = "1", features = ["derive"]}
-serde_json = "1.0.140"
+# Axum and Askama
+axum = "0.8.3"
+askama = "0.13.1"
+# Shuttle
 shuttle = "0.8.0"
 shuttle-runtime = "0.51.0"
 shuttle-axum = "0.51.0"
-askama = {version = "0.12.1", features = ["markdown"]}
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
-tower-http = { version = "0.6.1", features = ["trace"] }
-urlencoding = "2.1.3"
+# Serde
+serde = {version = "1", features = ["derive"]}
+serde_repr = "0.1.20"
+serde_json = "1.0"
+# Other
 chrono = "0.4.40"
 chrono-tz = "0.10.3"
-reqwest = { version = "0.12", features = ["json"] }
-serde_repr = "0.1.20"
 colored = "3"
-uuid = { version = "1.16", features = ["serde", "v4"] }
-regex = "1.11.1"
+comrak = "0.38"
 echodb = "0.8.0"
-strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
 futures = "0.3.31"
+regex = "1.11.1"
+reqwest = { version = "0.12", features = ["json"] }
+strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
+tokio = {version = "1", features = ["full"]}
+tower-http = { version = "0.6.1", features = ["trace"] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
+urlencoding = "2.1.3"
+uuid = { version = "1.16", features = ["serde", "v4"] }
 
 [dev-dependencies]
 cargo-watch = "8.5.3"
